take the old `gb` repo and turn it into `gbs`

--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,8 @@ deps =
     pytest-cov
 
 setenv =
-    LINTABLES = src/gb/
-    TYPEABLES = src/gb/
+    LINTABLES = src/gbs/
+    TYPEABLES = src/gbs/
 
 commands =
     bash -c 'python -m pytest'
