--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,26 @@
 [tool.poetry]
-name = "gb"
-version = "0.1.2"
+name = "gbs"
+version = "0.1.4"
 description = "A Python gopher server."
 authors = ["Simon de Vlieger <cmdr@supakeen.com>"]
 license = "MIT"
 readme = "README.md"
 keywords = ["gopher", "server"]
-repository = "https://src.tty.cat/supakeen/gb"
+repository = "https://github.com/gopherball/gbs"
 classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
 ]
 packages = [
-    { include = "gb", from = "src" }
+    { include = "gbs", from = "src" }
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
 tornado = "^6.0"
 click = "^8.0"
-python-magic = "^0.4.27"
+gb = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3"
@@ -40,7 +40,7 @@ enable = true
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
-addopts = "--cov=gb test/"
+addopts = "--cov=gbs test/"
 
 [tool.black]
 line-length = 80
@@ -61,7 +61,7 @@ exclude = '''
 )/
 '''
 [tool.poetry.scripts]
-gb = 'gb.__main__:main'
+gbs = 'gbs.__main__:main'
 
 [tool.mypy]
 python_version = "3.7"
